# commucat

./: .env.sample  .gitignore  ARCHITECT.md  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  ROADMAP.md  commucat.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: certificate.rs  hex.rs  lib.rs  pq.rs  zkp.rs
crates/federation/: Cargo.toml  README.md
crates/federation/src/: lib.rs
crates/ledger/: Cargo.toml  README.md
crates/ledger/src/: lib.rs
crates/media/: Cargo.toml  README.md
crates/media-types/: Cargo.toml
crates/media-types/src/: lib.rs
crates/media/src/: lib.rs
crates/media/src/audio/: mod.rs
crates/media/src/capture/: mod.rs
crates/media/src/pipeline/: mod.rs
crates/media/src/video/: mod.rs
crates/media/src/voice/: mod.rs
crates/proto/: Cargo.toml  README.md
crates/proto/src/: call.rs  lib.rs  obfuscation.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: config.rs  main.rs  metrics.rs  openapi.rs  util.rs
crates/server/src/app/: federation.rs  media.rs  mod.rs  p2p.rs  rotation.rs  uploads.rs
crates/server/src/security/: limiter.rs  mod.rs  secrets.rs
crates/server/src/transport/: fec.rs  keepalive.rs  mod.rs  network_probe.rs
crates/storage/: Cargo.toml  README.md
crates/storage/migrations/: 002_pairing.sql  003_user_blob.sql  004_server_secrets.sql  005_device_rotation.sql  006_federation_outbox.sql  007_friend_requests.sql  008_federated_identifiers.sql  009_device_pq.sql
crates/storage/src/: lib.rs
docs/: CONNECT_MODES_TROUBLESHOOTING.md  IMPLEMENTATION_TODO.md  P2P_ARCHITECTURE_OVERVIEW.md  P2P_ASSIST_CLIENT_GUIDE.md  P2P_PQ_INTEGRATION_GUIDE.md  SERVER_GUIDE.md  TRANSPORT_IMPLEMENTATION_STATUS.md  dev_todo_tracker.md  feature_todo_register.md  openapi-server.spec.yaml  quickstart.md  todo.md
docs/examples/: resilient_connection.rs
docs/systemd/: commucat.service
migrations/: 001_init.sql
