[package]
name = "commucat-cli"
version = "1.0.0"
edition = "2021"
description = "Operational CLI tools for CommuCat deployments"
license = "MPL-2.0"
homepage = "https://commucat.tech"
repository = "https://github.com/ducheved/commucat"
readme = "README.md"
publish = false

[dependencies]
chrono = { workspace = true }
commucat-crypto = { path = "../crypto", version = "1.0" }
commucat-ledger = { path = "../ledger", version = "1.0" }
commucat-storage = { path = "../storage", version = "1.0" }
dotenvy = "0.15"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
