[package]
name = "commucat-ledger"
version = "1.0.0"
edition = "2024"
description = "Optional ledger adapters for CommuCat digest exports"
license = "MPL-2.0"
homepage = "https://commucat.tech"
repository = "https://github.com/ducheved/commucat"
readme = "README.md"
keywords = ["commucat", "ledger", "digest"]
categories = ["data-structures", "network-programming"]

[dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
