[package]
name = "commucat-media"
version = "1.0.0"
edition = "2024"
description = "Audio and video media primitives for CommuCat calls"
license = "MPL-2.0"
homepage = "https://commucat.tech"
repository = "https://github.com/ducheved/commucat"
readme = "README.md"
keywords = ["commucat", "media", "rtp", "audio", "video"]
categories = ["multimedia::audio", "multimedia::video", "network-programming"]

[features]
default = ["audio", "pipeline"]
audio = ["dep:audiopus"]
audio-io = ["audio", "dep:cpal"]
video = ["dep:env_libvpx_sys"]
pipeline = ["dep:tokio"]

[dependencies]
audiopus = { version = "0.3.0-rc.0", optional = true }
cpal = { version = "0.15", optional = true }
env_libvpx_sys = { package = "env-libvpx-sys", version = "5.1.3", optional = true, features = ["generate"] }
thiserror = "1.0"
tokio = { workspace = true, optional = true, features = ["sync", "time"] }
tracing = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }


