[package]
name = "commucat-proto"
version = "1.0.0"
edition = "2021"
description = "Framing and codec layer for the CommuCat CCP-1 protocol"
license = "MPL-2.0"
homepage = "https://commucat.tech"
repository = "https://github.com/ducheved/commucat"
readme = "README.md"
keywords = ["commucat", "ccp", "protocol"]
categories = ["network-programming", "encoding"]

[features]
default = []
obfuscation = [
    "dep:rand",
    "dep:blake3",
]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
