[package]
name = "commucat-server"
version = "1.0.0"
edition = "2024"
description = "CommuCat secure messaging router built on Pingora"
license = "MPL-2.0"
homepage = "https://commucat.tech"
repository = "https://github.com/ducheved/commucat"
readme = "README.md"
keywords = ["commucat", "server", "pingora"]
categories = ["network-programming", "asynchronous"]
publish = false

[features]
default = []
media-av1 = ["commucat-media/codec-av1"]
media-h264 = ["commucat-media/codec-h264"]

[dependencies]
chrono = { workspace = true }
commucat-crypto = { path = "../crypto", version = "1.0", features = ["pq"] }
commucat-federation = { path = "../federation", version = "1.0" }
commucat-ledger = { path = "../ledger", version = "1.0" }
commucat-proto = { path = "../proto", version = "1.0" }
commucat-media = { path = "../media", version = "1.0", features = ["video"] }
commucat-storage = { path = "../storage", version = "1.0" }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
redis = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pingora = { workspace = true }
rand = { workspace = true }
subtle = "2.5"
async-trait = "0.1"
raptorq = { workspace = true }
ml-kem = { workspace = true }
