[package]
name = "commucat-storage"
version = "1.0.0"
edition = "2021"
description = "PostgreSQL and Redis data access layer for CommuCat"
license = "MPL-2.0"
homepage = "https://commucat.tech"
repository = "https://github.com/ducheved/commucat"
readme = "README.md"
keywords = ["commucat", "postgres", "redis"]
categories = ["database", "network-programming"]

[dependencies]
chrono = { workspace = true }
redis = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
